--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -1280,11 +1280,6 @@ penguins_mutate_list <-
   penguins_local |>
   dpurrr_to_list() |>
   dpurrr_mutate(\(d) list(body_mass_kg = d$body_mass_g / 1000)) 
- 
-mtcars_mutate_list <- 
-  mtcars |>
-  dpurrr_to_list() |>
-  dpurrr_mutate(\(d) list(wt_kg = d$wt * 1000 / 2.2))
 ```
 
 :::: {.columns}
@@ -1328,15 +1323,185 @@ penguins_local |>
   print()
 ```
 
-## `dpurrr_summarise()`
+## Our turn: dpurrr summarise
 
 ```{r}
-dpurrr_summarise <- function(df, reducer, .init) {
-  df |>
-    as.list() |>
-    purrr::list_transpose(simplify = FALSE) |>
-    purrr::reduce(reducer, .init = .init) |>
-    as.data.frame()
+#' @param .d unnamed list of named lists, i.e. transposed data frame
+#' @param reducer function applied accumulator and to each member of `.d`
+#' @param .init initial value of accumulator, if empty: first element of `.d`
+#' @param ... other arguments passed to `purrr::reduce()`
+#'
+#' @return unnamed list of named lists, i.e. transposed data frame
+dpurrr_summarise <- function(.d, reducer, .init, ...) {
+  # wrap result in a list, to return a transposed data frame
+  .d |> purrr::reduce(reducer, .init = .init, ...) |> list()
+}
+```
+
+Takes a transposed data frame, returns a transposed data frame with a single "row".
+
+```r
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+## Our turn: dpurrr summarise (start) {auto-animate=true}
+
+```{.r code-line-numbers="1-1,10"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+```{r echo=FALSE}
+penguins_local
+```
+
+## Our turn: dpurrr summarise (by row, before) {auto-animate=true}
+
+```{.r code-line-numbers="1-2,10"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+:::: {.columns}
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 1)
+```
+:::
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 2)
+```
+:::
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 3)
+```
+:::
+
+::::
+
+
+## Our turn: dpurrr summarise (by row, after) {auto-animate=true}
+
+```{.r code-line-numbers="1-8,10"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+```{r echo=FALSE}
+penguins_summarise_list <- 
+  penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  )
+```
+
+```{r echo=FALSE}
+str_element(penguins_summarise_list, 1)
+```
+
+## Our turn: dpurrr summarise (result) {auto-animate=true}
+
+```{.r code-line-numbers="1-10"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+```{r echo=FALSE}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_summarise(
+    \(acc, d) list(
+      body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+      body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
+    )
+  ) |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+## Our turn: dpurrr summarise with grouping
+
+We need a couple more functions to split and combine, also for our reducer:
+
+```r
+#' @param .d unnamed list of named lists, i.e. transposed data frame
+#' @param name string, name of variable on which to split
+#'
+#' @return named list of transposed data frames, names: values of split variable
+dpurrr_split <- function(.d, name) {
+  # uses purrr::map(), purrr::set_names(), purrr::keep()
+}
+```
+
+. . .
+
+<hr>
+
+```r
+#' @param .nd named list of transposed data frames
+#' @param name string, name of variable to put into combined list
+#'
+#' @return transposed data frame
+dpurrr_combine <- function(.nd, name) {
+  # uses purrr::imap(), purrr::reduce()
 }
 ```
 
@@ -1345,15 +1510,101 @@ dpurrr_summarise <- function(df, reducer, .init) {
 <hr>
 
 ```{r}
-mtcars |> 
-  dpurrr_summarise(
-    reducer = \(acc, val) list(
-      wt_min = min(acc$wt_min, val$wt), 
-      wt_max = max(acc$wt_max, val$wt)
-    ),
-    .init = list(wt_min = Inf, wt_max = -Inf)
+body_mass_g_min_max <- function(acc, d) {
+  list(
+    body_mass_g_min = min(acc$body_mass_g_min, d$body_mass_g, na.rm = TRUE),
+    body_mass_g_max = max(acc$body_mass_g_max, d$body_mass_g, na.rm = TRUE)
   )
+}
 ```
+
+```{r echo=FALSE}
+#' @param .d unnamed list of named lists, i.e. transposed data frame
+#' @param name string, name of variable on which to split
+#'
+#' @return named list of transposed data frames, names: values of split variable
+dpurrr_split <- function(.d, name) {
+
+  # named list, names and values are unique values of .d[[name]]
+  d_name <- .d |> purrr::map(\(d) d[[name]]) |> unique() |> purrr::set_names()
+
+  # for each element, keep rows that "contain" the name
+  d_name |> purrr::map(\(x) .d |> purrr::keep(\(d) d[[name]] == x))
+}
+```
+
+```{r echo=FALSE}
+#' @param .nd named list of transposed data frames
+#' @param name string, name of variable to put into combined list
+#'
+#' @return transposed data frame
+dpurrr_combine <- function(.nd, name) {
+
+  .nd |>
+    # for each transposed data frame, set name within
+    purrr::imap(
+      function(d, id) {
+        d |> dpurrr_mutate(\(d) list(id) |> purrr::set_names(name))
+      }
+    ) |>
+    # reduce to single transposed data frame
+    purrr::reduce(c)
+}
+```
+
+## Our turn: dpurrr summarise with grouping (start) {auto-animate=true}
+
+```{.r code-line-numbers="1,7"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_split("species") |>
+  map(\(d) d |> dpurrr_summarise(body_mass_g_min_max)) |>
+  dpurrr_combine("species") |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+```{r echo=FALSE}
+penguins_local
+```
+
+## Our turn: dpurrr summarise with grouping (by row, before) {auto-animate=true}
+
+```{.r code-line-numbers="1-2,7"}
+penguins_local |>
+  dpurrr_to_list() |>
+  dpurrr_split("species") |>
+  map(\(d) d |> dpurrr_summarise(body_mass_g_min_max)) |>
+  dpurrr_combine("species") |>
+  dpurrr_to_tibble() |>
+  print()
+```
+
+<hr>
+
+:::: {.columns}
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 1)
+```
+:::
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 2)
+```
+:::
+
+::: {.column .opacity-67 width="33%"}
+```{r echo=FALSE}
+str_element(penguins_list, 3)
+```
+:::
+
+::::
 
 ## With grouping
 
@@ -1376,7 +1627,7 @@ summariser <- purrr::partial(
 
 ## Et voilà
 
-```{r}
+```{.r}
 mtcars |> 
   split(mtcars$gear) |>
   purrr::map(summariser) |> 
